--- a/app_chi_tieu/pubspec.yaml
+++ b/app_chi_tieu/pubspec.yaml
@@ -17,12 +17,13 @@ dependencies:
   image_picker: ^1.0.7       # Chụp ảnh hóa đơn
   path_provider: ^2.1.2      # Lấy đường dẫn lưu ảnh tạm
   path: ^1.9.0               # Xử lý đường dẫn ảnh
-  google_mlkit_text_recognition: ^0.15.0  # OCR chuyển ảnh thành text
   cupertino_icons: ^1.0.8
   intl: ^0.19.0
   flutter_svg: ^2.0.7
   table_calendar: ^3.0.9
   date_picker_timeline: ^1.2.5
+  shared_preferences: ^2.5.3
+  fl_chart: ^1.0.0
 
 dev_dependencies:
   flutter_test:
